--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#4B0082" />
+    <meta name="theme-color" content="#ff5c41" />
     <meta
       name="description"
       content="Lost@Campus - A platform to report and find lost items on campus"
